@@ -1,4 +1,4 @@
-# $Id: tiki_1.7to1.8.sql,v 1.23 2003-10-01 14:10:17 lrargerich Exp $
+# $Id: tiki_1.7to1.8.sql,v 1.24 2003-10-02 14:18:06 lrargerich Exp $
 
 # The following script will update a tiki database from verion 1.7 to 1.8
 # 
@@ -679,3 +679,5 @@ where tc.object = md5(concat('poll', tp.pollId));
 
 alter table tiki_forums add forum_last_n int(2);
 update tiki_forums set forum_last_n = 0;
+
+CREATE  TABLE tiki_dynamic_variables( name varchar( 40  ) not null,  DATA text,  PRIMARY  KEY ( name )  );
